--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,89 @@
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TicTacToe"
+                android:textColor="@android:color/white"
+                android:textSize="20dp"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:text="RESET"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary"/>
+
+        </Toolbar>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:gravity="center">
+            <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:rowCount="3"
+                android:columnCount="3">
+
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+
+            </GridLayout>
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:text="X"
+            android:textSize="40dp"
+            android:textAlignment="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Winner"
+            android:textSize="30dp"
+            android:textAlignment="center"/>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
