--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
+                android:onClick="resetActivity"
                 android:text="RESET"
                 android:textColor="@android:color/white"
                 android:background="@color/colorPrimary"/>
@@ -35,40 +36,94 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/player1name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Player1"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="vs"
+                android:layout_weight="1"
+                android:textAlignment="center"/>
+
+            <TextView
+                android:id="@+id/player2name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="Player2"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
             android:gravity="center">
             <GridLayout
+                android:id="@+id/board"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:rowCount="3"
                 android:columnCount="3">
 
                 <Button
+                    android:tag="00"
+                    android:id="@+id/button1"
+                    android:onClick="markCellActivity"
                     android:layout_width="100dp"
                     android:layout_height="100dp"/>
                 <Button
+                    android:tag="01"
+                    android:id="@+id/button2"
+                    android:onClick="markCellActivity"
                     android:layout_width="100dp"
                     android:layout_height="100dp"/>
                 <Button
+                    android:tag="02"
+                    android:id="@+id/button3"
+                    android:onClick="markCellActivity"
                     android:layout_width="100dp"
                     android:layout_height="100dp"/>
                 <Button
+                    android:tag="10"
+                    android:id="@+id/button4"
+                    android:onClick="markCellActivity"
                     android:layout_width="100dp"
                     android:layout_height="100dp"/>
                 <Button
+                    android:tag="11"
+                    android:id="@+id/button5"
+                    android:onClick="markCellActivity"
                     android:layout_width="100dp"
                     android:layout_height="100dp"/>
                 <Button
+                    android:tag="12"
+                    android:id="@+id/button6"
+                    android:onClick="markCellActivity"
                     android:layout_width="100dp"
                     android:layout_height="100dp"/>
                 <Button
+                    android:tag="20"
+                    android:id="@+id/button7"
+                    android:onClick="markCellActivity"
                     android:layout_width="100dp"
                     android:layout_height="100dp"/>
                 <Button
+                    android:tag="21"
+                    android:id="@+id/button8"
+                    android:onClick="markCellActivity"
                     android:layout_width="100dp"
                     android:layout_height="100dp"/>
                 <Button
+                    android:tag="22"
+                    android:id="@+id/button9"
+                    android:onClick="markCellActivity"
                     android:layout_width="100dp"
                     android:layout_height="100dp"/>
 
@@ -76,16 +131,18 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/currentPlayerText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:text="X"
+            android:text=""
             android:textSize="40dp"
             android:textAlignment="center"/>
         <TextView
+            android:id="@+id/winner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Winner"
+            android:text=""
             android:textSize="30dp"
             android:textAlignment="center"/>
 
